# samp

./: build.gradle  settings.gradle
app/: build.gradle  (+2 more)
app/src/main/cpp/samp/: CMakeLists.txt  main.cpp  main.h  playertags.cpp  scoreboard.cpp  scoreboard.h  settings.cpp
app/src/main/cpp/samp/game/: BuildingRemoval.cpp  BuildingRemoval.h  CFileMgr.cpp  CFirstPersonCamera.cpp  CGPS.cpp  CGPS.hpp  CHandlingDefault.cpp  CHandlingDefault.h  COccluder.h  COcclusion.cpp  Camera.cpp  Camera.h  CdStreamInfo.cpp  CdStreamInfo.h  Coronas.cpp  CrossHair.cpp  FileLoader.cpp  IplStore.cpp  Lines.cpp  MemoryMgr.cpp  PedIntelligence.cpp  Pickup.cpp  Pickups.cpp  Pools.cpp  RealTimeShadow.cpp  RealTimeShadow.h  RealTimeShadowManager.cpp  RealTimeShadowManager.h  References.cpp  RegisteredCorona.cpp  RenderBuffer.cpp  RenderBuffer.h  Renderer.cpp  ShadowCamera.cpp  ShadowCamera.h  Streaming.cpp  StreamingInfo.cpp  TimeCycle.cpp  Timer.cpp  TxdStore.cpp  (+27 more)
app/src/main/cpp/samp/game/Animation/: AnimBlendAssocGroup.cpp  AnimBlendHierarchy.cpp  AnimBlendNode.cpp  AnimBlendStaticAssociation.cpp  AnimManager.cpp
app/src/main/cpp/samp/game/Collision/: BoundingBox.cpp  ColStore.cpp  Collision.cpp
app/src/main/cpp/samp/game/Core/: Matrix.cpp  MatrixLinkList.cpp
app/src/main/cpp/samp/game/Entity/: Building.cpp  CEntityGTA.cpp  CEntityGTA.h  CPedGTA.cpp  CPhysical.cpp  CVehicleGTA.cpp  Placeable.cpp  PlayerPedGta.cpp
app/src/main/cpp/samp/game/Events/: Event.cpp  EventHandler.cpp
app/src/main/cpp/samp/game/Models/: AtomicModelInfo.cpp  ClumpModelInfo.cpp  ModelInfo.cpp
app/src/main/cpp/samp/game/RW/: GraphicsSystem.cpp  RenderWare.cpp  RwHelper.cpp  rphanim.cpp  rpskin.cpp  rpworld.cpp  rtanim.cpp  rtquat.cpp  rwcore.cpp  rwplcore.cpp
app/src/main/cpp/samp/game/Tasks/: Task.cpp  TaskManager.cpp
app/src/main/cpp/samp/game/Textures/: TextureDatabaseRuntime.cpp  TextureListingContainer.cpp
app/src/main/cpp/samp/game/Widgets/: TouchInterface.cpp  WidgetGta.cpp
app/src/main/cpp/samp/game/graphics/: ES2VertexBuffer.cpp  RQShader.cpp
app/src/main/cpp/samp/gui/: gui.cpp  gui.h  imguirenderer.cpp  imguirenderer.h  imguiwrapper.cpp  imguiwrapper.h  uisettings.cpp  uisettings.h
app/src/main/cpp/samp/java/: editobject.cpp  jniutil.cpp  jniutil.h
app/src/main/cpp/samp/net/: localplayer.cpp  localplayer.h  netgame.cpp  netgame.h  netrpc.cpp  playerbubblepool.cpp  playerpool.cpp  remoteplayer.cpp  scriptrpc.cpp
app/src/main/cpp/samp/util/: CUtil.cpp  CUtil.h
app/src/main/cpp/samp/voice_new/: Channel.cpp  Effect.cpp  GlobalStream.cpp  Header.h  LocalStream.cpp  LocalStream.h  MicroIcon.cpp  MicroIcon.h  Network.cpp  Network.h  Playback.cpp  Plugin.cpp  Record.cpp  Record.h  SpeakerList.cpp  SpeexCompat.h  StreamAtObject.cpp  StreamInfo.cpp
(+292 files in other folders)
